# memdsl

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: phase_minus_one_baseline.py
docs/: DESIGN_explicit_edges_phase6.md  DESIGN_memory_source_compiled_view.md  DESIGN_review_policy.md  DOCUMENTATION_INDEX.md  PAPER_LICENSE.md  PAPER_final_integration_audit.md  PAPER_publication_readiness_audit.md  PAPER_related_work_claim_ledger.md  PAPER_reproducibility_and_release_metadata.md  PAPER_review_gated_authority_source_compiled_contract.md  PUBLIC_API.md  RELEASE_SCOPE_PHASE6.md  SPEC.md  UPGRADING.md
docs/baselines/: PHASE_MINUS_ONE_SCALE_BASELINE.md  phase_minus_one_0.6.0.json
docs/releases/: 0.9.0.md
examples/alex/: projects.aurora.mem  self.mem
examples/compliance/: cases.jsonl  memory.mem
examples/dialect/: dialect.mem  memdsl.json  projects.mem  workspace-dialect.memschema.json
examples/domains/assistant/: assistant.memschema.json  memdsl.json  memory.mem
examples/domains/coding/: cases.jsonl  coding.memschema.json  memdsl.json  memory.mem
examples/domains/writing/: memdsl.json  memory.mem  writing.memschema.json
examples/lint-demo/: broken.mem
examples/mira/: self.mem
scripts/: release_checks.py  release_fresh_install.py
src/memdsl/: __init__.py  authority.py  benchmark.py  cli.py  compiler.py  compliance.py  edge.py  graph.py  lexical.py  linter.py  mcp_server.py  mcp_service.py  model.py  navigation.py  parser.py  policy.py  query.py  review.py  review_reporting.py  schema.py  serving.py  view.py
tests/: test_benchmark.py  test_compiler.py  test_compliance.py  test_linter.py  test_mcp_server.py  test_mcp_service.py  test_parser.py  test_phase_five_quarantine_enforcement.py  test_phase_four_use_dialect.py  test_phase_minus_one_characterization.py  test_phase_one_diagnostics_view.py  test_phase_six_explicit_edges.py  test_phase_three_indexed_query_trace.py  test_phase_two_catalog_budget.py  test_policy.py  test_public_api.py  test_query.py  test_release_candidate.py  test_review.py  test_review_policy_cli.py  test_review_reporting.py  test_schema.py
tests/fixtures/phase_minus_one/: authority_archived.mem  authority_candidate_constraint.mem  authority_candidate_fact.mem  authority_retracted.mem  baseline.mem  duplicate_id.mem  multiple_modules.mem  reference_resolution.mem  revision_cycle.mem  revision_fork.mem  temporal_access.mem
tests/snapshots/phase_minus_one/: explain.json  memory_map.json  query.json
