[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memdsl"
version = "0.3.0"
description = "Agent memory as normative source code: a lintable, queryable memory DSL for LLM agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "liyuan" }]
keywords = ["llm", "agent", "memory", "dsl", "context-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
memdsl = "memdsl.cli:main"
memdsl-mcp = "memdsl.mcp_server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
mcp = ["mcp>=1.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/memdsl"]
