[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memdsl"
version = "0.6.0"
description = "Schema-extensible agent memory as lintable, queryable source code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "liyuan" }]
keywords = ["llm", "agent", "memory", "dsl", "context-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
memdsl = "memdsl.cli:main"
memdsl-mcp = "memdsl.mcp_server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.2", "twine>=5.0"]
mcp = ["mcp>=1.2; python_version >= '3.10'"]

[tool.hatch.build.targets.wheel]
packages = ["src/memdsl"]
