[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "memdsl"
version = "0.9.0"
description = "Schema-extensible agent memory as lintable, queryable source code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "liyuan" }]
keywords = ["llm", "agent", "memory", "dsl", "context-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
memdsl = "memdsl.cli:main"
memdsl-mcp = "memdsl.mcp_server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.2", "hatchling==1.31.0", "twine>=5.0"]
mcp = ["mcp>=1.2; python_version >= '3.10'"]

[tool.hatch.build.targets.wheel]
packages = ["src/memdsl"]

[tool.hatch.build.targets.wheel.shared-data]
"CITATION.cff" = "share/doc/memdsl/CITATION.cff"
"LICENSE" = "share/doc/memdsl/LICENSE"
"docs/DOCUMENTATION_INDEX.md" = "share/doc/memdsl/DOCUMENTATION_INDEX.md"
"docs/DESIGN_memory_source_compiled_view.md" = "share/doc/memdsl/DESIGN_memory_source_compiled_view.md"
"docs/DESIGN_explicit_edges_phase6.md" = "share/doc/memdsl/DESIGN_explicit_edges_phase6.md"
"docs/PUBLIC_API.md" = "share/doc/memdsl/PUBLIC_API.md"
"docs/RELEASE_SCOPE_PHASE6.md" = "share/doc/memdsl/RELEASE_SCOPE_PHASE6.md"
"docs/SPEC.md" = "share/doc/memdsl/SPEC.md"
"docs/UPGRADING.md" = "share/doc/memdsl/UPGRADING.md"
"docs/PAPER_LICENSE.md" = "share/doc/memdsl/PAPER_LICENSE.md"
"docs/PAPER_publication_readiness_audit.md" = "share/doc/memdsl/PAPER_publication_readiness_audit.md"
"docs/PAPER_related_work_claim_ledger.md" = "share/doc/memdsl/PAPER_related_work_claim_ledger.md"
"docs/PAPER_reproducibility_and_release_metadata.md" = "share/doc/memdsl/PAPER_reproducibility_and_release_metadata.md"
"docs/PAPER_review_gated_authority_source_compiled_contract.md" = "share/doc/memdsl/PAPER_review_gated_authority_source_compiled_contract.md"
"docs/baselines/PHASE_MINUS_ONE_SCALE_BASELINE.md" = "share/doc/memdsl/baselines/PHASE_MINUS_ONE_SCALE_BASELINE.md"
"docs/baselines/phase_minus_one_0.6.0.json" = "share/doc/memdsl/baselines/phase_minus_one_0.6.0.json"
"benchmarks/phase_minus_one_baseline.py" = "share/doc/memdsl/benchmarks/phase_minus_one_baseline.py"

[tool.hatch.build.targets.sdist]
exclude = ["/AGENTS.md", "/docs/PAPER_final_integration_audit.md"]
